# icfp2024

./: .gitignore  HOWTO.md  README.md  Response.md
.devcontainer/: Dockerfile  devcontainer.json
3d/: README.md
3d/3d1/: 6600  9672
3d/3d10/: 179712  3d10.py
3d/3d11/: 3d11-draft.txt  3d11.py  scratch.txt
3d/3d12/: 3d solution.xlsx  684480  taylor.py
3d/3d2/: 17400  2800  28275  7260
3d/3d3/: 14520  2624  2640  6900
3d/3d4/: 10260  24885
3d/3d5/: 15840
3d/3d6/: 7182
3d/3d7/: 16100  22440
3d/3d8/: 40768
3d/3d9/: 3d9.py  51300
efficiency/: efficiency1.txt  efficiency10.txt  efficiency11.txt  efficiency12.txt  efficiency13.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5  efficiency5.txt  efficiency6  efficiency6.txt  efficiency7.txt  efficiency8.lp  efficiency8.scratch  efficiency8.txt  efficiency9.txt
frontend/: Makefile  elm.json  index.html
frontend/src/: Main.elm
lambdaman/: lambdaman10.txt.uneval  lambdaman15.txt  lambdaman16.txt  lambdaman17.txt  lambdaman18.txt  lambdaman19.txt  lambdaman20.txt  lambdaman21.txt.uneval  lambdaman3.txt  lambdaman4.txt  lambdaman5.txt  lambdaman7.txt  lambdaman8.txt
lambdaman/lambdaman10/: 1030  1039  1075  211  2899
lambdaman/lambdaman11/: 3175  3193  3199  3208  3244  417
lambdaman/lambdaman12/: 3174  3192  3198  3207  (+2 more)
src/: .gitignore  dune-project
src/lib/: astar.ml  communication.ml  dune  interpreter.ml  lambdaman_pack.ml  lambdaman_sim.ml  language.ml  metalanguage.ml  muttleyman.ml  solutions.ml  spaceshiplib.ml  threeD.ml  util.ml
warmup/: .gitignore  .ocamlformat
(+154 files in other folders)
