(library
 (name lib)
 (inline_tests)
 (preprocess
  (pps ppx_jane))
 (modules language astar interpreter communication solutions)
 (flags
  -strict-sequence
  -strict-formats
  -short-paths
  -keep-locs
  -warn-error
  A
  -w
  +a-4-29-33-40-41-42-44-45-48-70)
 (libraries core lwt cohttp cohttp-lwt-unix core_unix core_unix.sys_unix))
