(library
 (name lib)
 (inline_tests)
 (preprocess
  (pps ppx_jane))
 (modules
  util
  language
  astar
  interpreter
  communication
  solutions
  metalanguage
  lambdaman_pack
  threeD)
 (flags
  -strict-sequence
  -strict-formats
  -short-paths
  -keep-locs
  -warn-error
  A
  -w
  +a-4-29-33-40-41-42-44-45-48-70)
 (libraries
  core
  bignum
  lwt
  cohttp
  cohttp-lwt-unix
  core_unix
  core_unix.sys_unix))
